# hello-boys-bot

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: pipeline.yml
src/: api.rs  email.rs  main.rs
src/__data__/: let_agreed  no_let_agreed
src/snapshots/: hello_boys__api__tests__listing_let_agreed.snap  hello_boys__api__tests__listing_let_not_agreed.snap  hello_boys__tests__message_30_days.snap  hello_boys__tests__message_deposit_lost.snap  hello_boys__tests__message_one_day.snap  hello_boys__tests__message_rent_lost.snap
