[package]
name = "hello-boys"
version = "0.1.0"
authors = ["Oliver Bell <freshollie@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.7", features = ["json"] }
tokio = { version = "0.2.22", features = ["macros", "time", "rt-core", "fs"] }
async-smtp = "0.3.4"
clokwerk = "0.3.3"
regex = "1.3.9"
unindent = "0.1.6"
lazy_static = "1.4.0"
chrono = "0.4.15"
libmath = "0.2.1"

[dev-dependencies]
httpmock = "0.4.2"
insta = "0.16.1"
